testsuite/poke.pkl/in-diag-4.pk
/* { dg-do compile } */

defvar foo = [1,2,3] in ["a","b","c"]; /* { dg-error "wrong type.*equality" } */
